# asyncbox-framework

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg
.github/workflows/: actions.yml
asyncbox/: __init__.py  __main__.py  application.py  endpoints.py  main.py  plugin.py  settings.py
asyncbox/dependencies/: bot.py
asyncbox/plugins/debug/: commands.py  plugin.py
asyncbox/plugins/logger/: plugin.py
asyncbox/plugins/prometheus/: __init__.py  endpoint.py  plugin.py
asyncbox/plugins/redis/: plugin.py  repo.py
asyncbox/plugins/sentry/: __init__.py  middleware.py  plugin.py
asyncbox/plugins/sqlalchemy/: plugin.py
asyncbox/plugins/sqlalchemy/template/: cookiecutter.json
asyncbox/plugins/sqlalchemy/template/{{cookiecutter.bot_name}}/app/db/: models.py
asyncbox/plugins/sqlalchemy/template/{{cookiecutter.bot_name}}/app/db/migrations/: env.py
asyncbox/template/: cookiecutter.json
asyncbox/template/{{cookiecutter.bot_name}}/: pyproject.toml
asyncbox/template/{{cookiecutter.bot_name}}/app/: main.py  settings.py
asyncbox/tests/: fixtures.py
asyncbox/utils/: mako.py  singleton_wrapper.py
boxv2/: __init__.py  __main__.py  application.py  endpoints.py  main.py  plugin.py  settings.py
boxv2/error_handlers/: server_unknown.py
boxv2/plugins/debug/: __init__.py  commands.py  plugin.py
boxv2/plugins/forbid_ext_cts/: plugin.py
boxv2/plugins/logger/: __init__.py  plugin.py
boxv2/plugins/prometheus/: endpoint.py  middleware.py  plugin.py
boxv2/plugins/redis/: __init__.py  plugin.py
boxv2/plugins/sentry/: plugin.py
boxv2/plugins/sqlalchemy/: __init__.py  plugin.py  url_scheme_utils.py
boxv2/plugins/sqlalchemy/template/: cookiecutter.json
boxv2/plugins/sqlalchemy/template/{{cookiecutter.bot_name}}/app/db/: models.py
boxv2/plugins/sqlalchemy/template/{{cookiecutter.bot_name}}/app/db/migrations/: env.py
boxv2/plugins/sqlalchemy/template/{{cookiecutter.bot_name}}/migrations/: env.py
boxv2/plugins/tortoise/: dependencies.py  plugin.py  repo.py
boxv2/plugins/tortoise/template/{{cookiecutter.bot_name}}/: alembic.ini
boxv2/plugins/tortoise/template/{{cookiecutter.bot_name}}/migrations/versions/: c630e92c23e1_botx_main_tables.py
boxv2/template/: cookiecutter.json
boxv2/template/{{cookiecutter.bot_name}}/: pyproject.toml
boxv2/template/{{cookiecutter.bot_name}}/app/: commands.py  settings.py
boxv2/tests/: fixtures.py
boxv2/utils/: import_utils.py
scripts/: format  lint  test  test_bot_template
tests/: conftest.py
tests/test_main/: test_main.py
tests/test_plugins/: test_settings.py
tests/test_plugins/test_debug/: conftest.py  test_commands.py
tests/test_plugins/test_logger/: test_logger.py
tests/test_plugins/test_prometheus/: conftest.py  test_endpoint.py
tests/test_plugins/test_redis/: conftest.py  test_plugin.py  test_repo.py
tests/test_plugins/test_sqlalchemy/: conftest.py  test_plugin.py  test_url_scheme_utils.py
tests/test_plugins/test_tortoise/: conftest.py  test_dependencies.py  test_models.py  test_repo.py
tests/test_utils/: template.mako  test_mako.py
