[tool.poetry]
name = "boxv2"
version = "0.4.0"
description = "Express bot framework"
authors = ["vkarabanov <vkarabanov@ccsteam.ru>"]

[tool.poetry.dependencies]
python = "~3.9"
botx = "^0.20"
cookiecutter = "^1.7.2"
fastapi = "^0.68.2"
uvicorn = "^0.15.0"
click = "^8.0.1"
sentry-sdk = "^0.20.2"
tortoise-orm = "^0.16.21"
databases = { version = "~0.4.1", extras = ["postgresql"] }
aioredis = "^1.3.1"
alembic = "^1.5.4"
psycopg2-binary = "^2.8.6"  # for alembic
loguru = "^0.5.3"
prometheus-client = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "~20.8b1"
isort = "~4.3.21"
autoflake = "~1.4"
mypy = "~0.800"
wemake-python-styleguide = "~0.14"
pytest = "~5.4.1"
pytest-cov = "~2.8.1"
pytest-asyncio = "~0.12.0"
pytest-localserver = "~0.5.0"
python-dotenv = "~0.13.0"
pytest-env = "~0.6.2"
pytest-clarity = "~0.3.0-alpha.0"
pytest-timeout = "~1.3.4"
asgi-lifespan = "~1.0.1"
molten = "~1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
boxv2 = 'boxv2.main:main'