[tool.poetry]
name = "asyncbox"
version = "0.4.2"
description = "Express bot framework"
authors = ["vkarabanov <vkarabanov@ccsteam.ru>"]

[tool.poetry.dependencies]
python = "~3.9"
botx = "~0.25"
cookiecutter = "~1.7.3"
fastapi = "~0.70.0"
uvicorn = "~0.15.0"
click = "~8.0.1"
databases = { version = "~0.4.1", extras = ["postgresql"] }
aioredis = "~1.3.1"
SQLAlchemy = "~1.4.25"
alembic = "~1.7.4"
psycopg2-binary = "^2.8.6"
loguru = "~0.5.3"
sentry-sdk = "~0.20.2"
prometheus-client = "~0.9.0"

[tool.poetry.dev-dependencies]
black = "~21.9b0"
isort = "~5.9.3"
autoflake = "~1.4"
mypy = "~0.910"
wemake-python-styleguide = "~0.15.3"
pytest = "~5.4.1"
pytest-cov = "~2.8.1"
pytest-asyncio = "~0.12.0"
pytest-localserver = "~0.5.0"
python-dotenv = "~0.13.0"
pytest-env = "~0.6.2"
pytest-clarity = "~0.3.0-alpha.0"
pytest-timeout = "~1.3.4"
asgi-lifespan = "~1.0.1"
molten = "~1.0.2"
sqlalchemy-stubs = "~0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
asyncbox = 'asyncbox.main:main'
