[tool.poetry]
name = "asyncbox"
version = "0.5.1"
description = "Express bot framework"
authors = ["vkarabanov <vkarabanov@ccsteam.ru>"]

[tool.poetry.dependencies]
python = "~3.9"
botx = "~0.25"
fastapi = "~0.70.0"
uvicorn = "~0.15.0"
cookiecutter = "~1.7.3"
click = "~8.0.1"
loguru = "~0.5.3"
databases = { version = "~0.4.1", extras = ["postgresql"], optional = true }
aioredis = { version = "~1.3.1", optional = true }
SQLAlchemy = { version = "~1.4.25", extras=["mypy"], optional = true }
alembic = { version = "~1.7.4", optional = true }
psycopg2-binary = { version = "^2.8.6", optional = true }
asyncpg = { version = "~0.24.0", optional = true }
sentry-sdk = { version = "~0.20.2", optional = true }
prometheus-client = { version = "~0.9.0", optional = true }

[tool.poetry.dev-dependencies]
black = "~21.9b0"
isort = "~5.9.3"
autoflake = "~1.4"
mypy = "~0.910"
wemake-python-styleguide = "~0.15.3"
pytest = "~5.4.1"
pytest-cov = "~2.8.1"
pytest-asyncio = "~0.12.0"
pytest-localserver = "~0.5.0"
python-dotenv = "~0.13.0"
pytest-env = "~0.6.2"
pytest-clarity = "~0.3.0-alpha.0"
pytest-timeout = "~1.3.4"
asgi-lifespan = "~1.0.1"
molten = "~1.0.2"

sqlalchemy2-stubs = "^0.0.2-alpha.18"

# extras packages are duplicated to dev-dependencies as they need for unit-tests
databases = "~0.4.1"
aioredis = "~1.3.1"
SQLAlchemy = "~1.4.25"
alembic = "~1.7.4"
psycopg2-binary = "^2.8.6"
asyncpg = "~0.24.0"
loguru = "~0.5.3"
sentry-sdk = "~0.20.2"
prometheus-client = "~0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
asyncbox = 'asyncbox.main:main'

[tool.poetry.extras]
prometheus = ["prometheus-client"]
redis = ["aioredis"]
sentry = ["sentry-sdk"]
sqlalchemy = ["SQLAlchemy", "alembic", "psycopg2-binary", "asyncpg", "databases"]
