# https://github.com/python-poetry/poetry#introduction

[tool.poetry]
name = "{{cookiecutter.bot_name}}"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
asyncbox = { git = "https://github.com/ExpressApp/asyncbox-framework.git", tag = "0.4.0"}

[tool.poetry.dev-dependencies]
black = "~20.8b1"
isort = "~4.3.21"
autoflake = "~1.4"
mypy = "~0.800"
wemake-python-styleguide = "~0.14"
pytest = "~5.4.1"
pytest-cov = "~2.8.1"
pytest-asyncio = "~0.12.0"
pytest-localserver = "~0.5.0"
python-dotenv = "~0.13.0"
pytest-env = "~0.6.2"
pytest-clarity = "~0.3.0-alpha.0"
pytest-timeout = "~1.3.4"
asgi-lifespan = "~1.0.1"
molten = "~1.0.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
