# https://github.com/python-poetry/poetry#introduction

[tool.poetry]
name = "{{cookiecutter.bot_name}}"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.9"
asyncbox = "0.4.2"

# uncomment if you want to use git version of package
#asyncbox = { git = "https://github.com/ExpressApp/asyncbox-framework.git", branch = "master"}

[tool.poetry.dev-dependencies]
black = "~21.9b0"
isort = "~5.9.3"
autoflake = "~1.4"
mypy = "~0.910"
wemake-python-styleguide = "~0.15.3"
pytest = "~5.4.1"
pytest-cov = "~2.8.1"
pytest-asyncio = "~0.12.0"
pytest-localserver = "~0.5.0"
python-dotenv = "~0.13.0"
pytest-env = "~0.6.2"
pytest-clarity = "~0.3.0-alpha.0"
pytest-timeout = "~1.3.4"
asgi-lifespan = "~1.0.1"
molten = "~1.0.2"
sqlalchemy-stubs = "~0.4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
